v0.1.14 - fixing issue from new chrome overflow rendering

--- a/css/main.css
+++ b/css/main.css
@@ -531,6 +531,7 @@ form > input {
 
 .hour {
   height: 100%;
+  min-height: 0px;
   z-index: 3;
   position: relative;
   pointer-events: none;
